--- a/index.html
+++ b/index.html
@@ -1,175 +1,216 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>章若楠 - 个人介绍</title>
     <style>
-        h1{
-            color: red;
-            text-align: center;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        p {
-            font-size: 20px;
-        }
-        p{
-            font-family: "方正楷体_GBK",sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-            text-indent: 2em;
-        }
-        h2{
-            color: cornflowerblue;
-            font-family: 方正楷体_GBK,sans-serif;
-            margin: 25px 0 15px 0;
-        }
-        .content-box {
-            border: 2px solid #6495ed;
-            background-color: white;
-            padding: 20px;
-            margin: 0 0 25px 0;
-            border-radius: 8px;
-        }
-        ul{
-            font-family: "方正楷体_GBK",sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-        }
-        ol{
-            font-family: "方正楷体_GBK",sans-serif;
-            font-size: 18px;
-            line-height: 1.6;
-        }
+
         body {
-            max-width: 800px;
+            font-family: "Microsoft YaHei", "PingFang SC", sans-serif;
+            background-color: #f5f7fa;
+            color: #333;
+            line-height: 1.6;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background: whitesmoke;
         }
-        a{
-            color:mediumpurple;
-            text-decoration: none;
-        }
-        a:hover{
-            text-decoration: underline;
-            color: palevioletred;
-        }
-        table{
-            width: 100%;
-            border-collapse: collapse;
-            font-family: 方正楷体_GBK,sans-serif;
-        }
-        th{
-            background-color: lightcyan;
-            color: black;
-            font-family: 方正楷体_GBK,sans-serif;
-            padding:16px;
-        }
-        td{
-            padding : 16px;
-            border-bottom: 1px solid black;
+
+        h1 {
             text-align: center;
+            color: #2c3e50;
+            margin: 30px 0;
+            font-size: 36px;
+            font-weight: 700;
         }
-        tr:hover{
-            background-color: palevioletred;
+
+        h2 {
+            color: #34495e;
+            margin: 25px 0 15px;
+            font-size: 24px;
+            border-left: 4px solid #e74c3c;
+            padding-left: 10px;
         }
-        form input, form textarea {
-            padding: 8px 10px;
+
+        .header-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+        }
+
+        .avatar {
+            width: 280px;
+            height: 400px;
+            border-radius: 8px;
+            object-fit: cover;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .basic-info {
+            flex: 1;
+            min-width: 300px;
+        }
+
+        .basic-info p {
+            font-size: 18px;
+            margin: 12px 0;
+        }
+
+        .basic-info strong {
+            color: #e74c3c;
+            width: 80px;
+            display: inline-block;
+        }
+
+        .content-section {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+        }
+
+        .movie-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .movie-item {
+            background-color: #f9f9f9;
+            padding: 15px;
+            border-radius: 8px;
+            border: 1px solid #eee;
+            transition: transform 0.3s ease;
+        }
+
+        .movie-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .movie-item h3 {
+            color: #e74c3c;
+            font-size: 18px;
+            margin-bottom: 8px;
+        }
+
+        .movie-item p {
+            font-size: 14px;
+            color: #666;
             margin: 5px 0;
-            font-family: "方正楷体_GBK",sans-serif;
-            font-size: 16px;
         }
-        form button {
-            padding: 10px 25px;
-            background-color: mediumpurple;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-family: "方正楷体_GBK",sans-serif;
-            font-size: 16px;
-        }
-        form button:hover {
-            background-color: palevioletred;
+
+        @media (max-width: 768px) {
+            .header-container {
+                flex-direction: column;
+                gap: 20px;
+            }
+
+            .avatar {
+                width: 220px;
+                height: 320px;
+            }
+
+            h1 {
+                font-size: 28px;
+            }
+
+            h2 {
+                font-size: 20px;
+            }
         }
     </style>
 </head>
 <body>
-<h1>欢迎来到ikun的个人主页</h1>
-<hr>
-<h2 class="a">关于我</h2>
-<img src="ikun.jpg" alt="ikun头像" width="250px" >
-<p>大家好！我叫<strong>ikun</strong>，今年2.5岁。</p>
-<p>我喜欢唱，跳，rap，篮球</p>
+<h1>章若楠 - 个人介绍</h1>
 
-<h2 class="b">我的技能</h2>
-<div class="content-box">
-    <ul>
-        <li>唱歌</li>
-        <li>跳舞</li>
-        <li>说唱</li>
-        <li>打篮球</li>
-    </ul>
+<div class="header-container">
+    <!-- 替换为你提供的图片链接 -->
+    <img src="https://n.sinaimg.cn/sinakd20108/560/w1080h1080/20230331/112b-a12dc6182f8b68c1839d264412b23b82.jpg" alt="章若楠写真" class="avatar">
+    <div class="basic-info">
+        <h2>基础信息</h2>
+        <p><strong>姓名：</strong>章若楠</p>
+        <p><strong>外文名：</strong>Zhang Ruonan</p>
+        <p><strong>出生日期：</strong>1996年11月14日</p>
+        <p><strong>出生地：</strong>浙江省温州市乐清市</p>
+        <p><strong>民族：</strong>汉族</p>
+        <p><strong>身高：</strong>166cm</p>
+        <p><strong>毕业院校：</strong>杭州电子科技大学</p>
+        <p><strong>职业：</strong>演员、模特</p>
+    </div>
 </div>
 
-<h2 class="b">我的学习计划</h2>
-<div class="content-box">
-    <ol>
-        <li>每周练习 2 次唱歌（主打流行曲风）</li>
-        <li>学习基础街舞动作，每天练 15 分钟</li>
-        <li>跟着教学视频练习 rap 节奏，每周写 1 段简单歌词</li>
-        <li>每周打 1 次篮球，练习运球和投篮基础动作</li>
-    </ol>
+<div class="content-section">
+    <h2>个人简介</h2>
+    <p>章若楠1996年出生于浙江温州，早年因担任淘宝模特进入大众视野，后凭借清新自然的外形和真实的表演风格踏入影视圈。2017年，她被导演落落选中，出演个人首部电影《悲伤逆流成河》，在片中饰演温柔善良的顾森湘一角，凭借该角色迅速走红，给观众留下了深刻印象。</p>
+    <p>章若楠的表演风格自然不做作，兼具颜值与演技，出道后参演了多部不同类型的影视作品，既塑造过青春校园题材的角色，也挑战过现实题材、古装题材等不同风格的作品，逐渐从新人演员成长为兼具人气与实力的青年演员。她性格开朗阳光，私下里热爱生活，是观众心中“初恋感”的代表演员之一。</p>
 </div>
 
-<h2 class="b">我喜欢的网站</h2>
-<div class="content-box">
-    <p>以下是一些我经常访问的网站：</p>
-    <ul>
-        <li><a href="https://www.baidu.com"> 百度 </a> - 搜索引擎</li>
-        <li><a href="https://www.bilibili.com"> 哔哩哔哩 </a> - 学习视频</li>
-        <li><a href="https://www.douyin.com/search/dy"> 抖音 </a> - 冲浪</li>
-    </ul>
+<div class="content-section">
+    <h2>教育背景</h2>
+    <p>章若楠毕业于<strong>杭州电子科技大学</strong>，就读于电子商务专业。虽然并非科班出身的演员，但她凭借自身的努力和对表演的热爱，在影视领域走出了属于自己的道路。大学期间，她因兼职做淘宝模特积累了镜头经验，也为后续进入演艺圈奠定了基础。</p>
 </div>
 
-<h2 class="b">联系我</h2>
-<table border="1">
-    <tr>
-        <th>联系方式</th>
-        <th>内容</th>
-    </tr>
-    <tr>
-        <td>邮箱</td>
-        <td>ikun@iiikun.com</td>
-    </tr>
-    <tr>
-        <td>电话</td>
-        <td>138-0000-0000</td>
-    </tr>
-    <tr>
-        <td>地址</td>
-        <td>中国ikun市</td>
-    </tr>
-</table>
-
-<h2 class="b">给我留言</h2>
-<div class="content-box">
-    <form>
-        <p>
-            <label>姓名：</label>
-            <input type="text">
-        </p>
-        <p>
-            <label>联系方式：</label>
-            <input type="password">
-        </p>
-        <p>
-            <label>留言内容</label>
-            <input type="text">
-        </p>
-        <p>
-            <button type="submit">提交留言</button>
-        </p>
-    </form>
+<div class="content-section">
+    <h2>主演影视作品</h2>
+    <div class="movie-list">
+        <div class="movie-item">
+            <h3>《悲伤逆流成河》</h3>
+            <p><strong>类型：</strong>青春、校园、剧情</p>
+            <p><strong>上映时间：</strong>2018年</p>
+            <p><strong>饰演角色：</strong>顾森湘</p>
+            <p><strong>简介：</strong>该片改编自郭敬明同名小说，讲述了校园霸凌背景下的青春故事，章若楠饰演的顾森湘是温柔美好的校花，也是她的银幕处女作。</p>
+        </div>
+        <div class="movie-item">
+            <h3>《你的婚礼》</h3>
+            <p><strong>类型：</strong>爱情、青春</p>
+            <p><strong>上映时间：</strong>2021年</p>
+            <p><strong>饰演角色：</strong>尤咏慈</p>
+            <p><strong>简介：</strong>与许光汉合作主演，讲述了男女主角从高中到成年的十年爱情长跑故事，是章若楠主演的首部票房破亿的爱情片。</p>
+        </div>
+        <div class="movie-item">
+            <h3>《如果声音不记得》</h3>
+            <p><strong>类型：</strong>爱情、奇幻</p>
+            <p><strong>上映时间：</strong>2020年</p>
+            <p><strong>饰演角色：</strong>吉择</p>
+            <p><strong>简介：</strong>饰演患有抑郁症的女孩吉择，展现了细腻的内心戏，挑战了与以往不同的角色类型。</p>
+        </div>
+        <div class="movie-item">
+            <h3>《凭栏一片风云起》</h3>
+            <p><strong>类型：</strong>年代、励志、战争</p>
+            <p><strong>播出时间：</strong>2022年</p>
+            <p><strong>饰演角色：</strong>孟海棠</p>
+            <p><strong>简介：</strong>首次挑战年代剧，饰演热血青年孟海棠，与胡一天搭档，讲述抗战时期的家国情怀。</p>
+        </div>
+        <div class="movie-item">
+            <h3>《治愈系恋人》</h3>
+            <p><strong>类型：</strong>都市、爱情、医疗</p>
+            <p><strong>播出时间：</strong>2023年</p>
+            <p><strong>饰演角色：</strong>苏为安</p>
+            <p><strong>简介：</strong>饰演患有罕见病却乐观坚韧的医学生苏为安，与罗云熙合作，展现医疗职场与爱情故事。</p>
+        </div>
+        <div class="movie-item">
+            <h3>《照亮你》</h3>
+            <p><strong>类型：</strong>都市、爱情、救援</p>
+            <p><strong>播出时间：</strong>2023年</p>
+            <p><strong>饰演角色：</strong>徐来</p>
+            <p><strong>简介：</strong>饰演新闻记者徐来，与陈伟霆搭档，讲述消防员与记者之间的治愈系爱情故事。</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
