--- a/index.html
+++ b/index.html
@@ -3,214 +3,282 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>章若楠 - 个人介绍</title>
+    <title>易梦园 - 个人简历</title>
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-
         body {
             font-family: "Microsoft YaHei", "PingFang SC", sans-serif;
-            background-color: #f5f7fa;
+            background-color: #f8f9fa;
             color: #333;
-            line-height: 1.6;
-            max-width: 1200px;
+            line-height: 1.8;
+            max-width: 1000px;
             margin: 0 auto;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-            margin: 30px 0;
-            font-size: 36px;
-            font-weight: 700;
-        }
-
-        h2 {
-            color: #34495e;
-            margin: 25px 0 15px;
-            font-size: 24px;
-            border-left: 4px solid #e74c3c;
-            padding-left: 10px;
-        }
-
-        .header-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            gap: 40px;
-            background-color: white;
             padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
         }
-
+        .resume-container {
+            background-color: white;
+            border-radius: 12px;
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.08);
+            padding: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .header {
+            text-align: center;
+            margin-bottom: 40px;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 20px;
+            width: 100%;
+        }
         .avatar {
-            width: 280px;
-            height: 400px;
+            width: 150px;
+            height: 200px;
             border-radius: 8px;
             object-fit: cover;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            margin-bottom: 20px;
+            border: 3px solid #e9f5ff;
         }
-
+        .name {
+            font-size: 36px;
+            color: #2c3e50;
+            margin-bottom: 10px;
+            font-weight: 700;
+        }
         .basic-info {
-            flex: 1;
-            min-width: 300px;
-        }
-
-        .basic-info p {
-            font-size: 18px;
-            margin: 12px 0;
-        }
-
-        .basic-info strong {
-            color: #e74c3c;
-            width: 80px;
-            display: inline-block;
-        }
-
-        .content-section {
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
-        }
-
-        .movie-list {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .movie-item {
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 8px;
-            border: 1px solid #eee;
-            transition: transform 0.3s ease;
-        }
-
-        .movie-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .movie-item h3 {
-            color: #e74c3c;
-            font-size: 18px;
-            margin-bottom: 8px;
-        }
-
-        .movie-item p {
-            font-size: 14px;
+            font-size: 16px;
             color: #666;
-            margin: 5px 0;
+            line-height: 2;
         }
-
+        .section {
+            width: 100%;
+            margin-bottom: 35px;
+        }
+        .section-title {
+            font-size: 22px;
+            color: #007bff;
+            margin-bottom: 15px;
+            padding-left: 12px;
+            border-left: 4px solid #007bff;
+            font-weight: 600;
+        }
+        .content {
+            font-size: 16px;
+            color: #444;
+        }
+        .education, .internship, .campus, .skills, .self-evaluation {
+            margin-left: 20px;
+        }
+        .internship-item, .campus-item {
+            margin-bottom: 25px;
+        }
+        .item-header {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 8px;
+            font-weight: 500;
+            color: #2c3e50;
+        }
+        .company, .position, .role {
+            font-weight: 600;
+        }
+        .date {
+            color: #666;
+            font-size: 15px;
+        }
+        ul {
+            list-style-type: disc;
+            margin-left: 30px;
+        }
+        .course-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+        .course-item {
+            background-color: #e9f5ff;
+            padding: 6px 12px;
+            border-radius: 20px;
+            color: #007bff;
+            font-size: 15px;
+        }
+        .contact-info {
+            margin-top: 15px;
+            font-size: 16px;
+            color: #555;
+        }
+        .job-intention {
+            display: inline-block;
+            background-color: #007bff;
+            color: white;
+            padding: 8px 20px;
+            border-radius: 30px;
+            font-size: 18px;
+            margin-top: 15px;
+        }
         @media (max-width: 768px) {
-            .header-container {
-                flex-direction: column;
-                gap: 20px;
+            .resume-container {
+                padding: 25px;
             }
-
-            .avatar {
-                width: 220px;
-                height: 320px;
-            }
-
-            h1 {
+            .name {
                 font-size: 28px;
             }
-
-            h2 {
+            .section-title {
                 font-size: 20px;
+            }
+            .item-header {
+                flex-direction: column;
+                gap: 5px;
+            }
+            .course-list {
+                gap: 10px;
+            }
+            .avatar {
+                width: 120px;
+                height: 160px;
             }
         }
     </style>
 </head>
 <body>
-<h1>章若楠 - 个人介绍</h1>
+    <div class="resume-container">
+        <!-- 头部信息（含图片） -->
+        <div class="header">
+            <img src="ymy.jpg" alt="易梦园个人照片" class="avatar">
+            <div class="name">易梦园</div>
+            <div class="basic-info">
+                出生年月：2003年8月 | 手机：13110235632 | 邮箱：2640414241@qq.com
+            </div>
+            <div class="contact-info">
+                备用邮箱：226418717003782@139.com
+            </div>
+            <div class="job-intention">求职意向：数据分析师</div>
+        </div>
 
-<div class="header-container">
-    <!-- 替换为你提供的图片链接 -->
-    <img src="https://n.sinaimg.cn/sinakd20108/560/w1080h1080/20230331/112b-a12dc6182f8b68c1839d264412b23b82.jpg" alt="章若楠写真" class="avatar">
-    <div class="basic-info">
-        <h2>基础信息</h2>
-        <p><strong>姓名：</strong>章若楠</p>
-        <p><strong>外文名：</strong>Zhang Ruonan</p>
-        <p><strong>出生日期：</strong>1996年11月14日</p>
-        <p><strong>出生地：</strong>浙江省温州市乐清市</p>
-        <p><strong>民族：</strong>汉族</p>
-        <p><strong>身高：</strong>166cm</p>
-        <p><strong>毕业院校：</strong>杭州电子科技大学</p>
-        <p><strong>职业：</strong>演员、模特</p>
+        <!-- 教育背景 -->
+        <div class="section">
+            <div class="section-title">教育背景</div>
+            <div class="content education">
+                <div class="item-header">
+                    <span class="school">重庆科技大学 | 数据科学与大数据技术</span>
+                    <span class="date">2022.09 - 2026.06</span>
+                </div>
+                <div class="course-title" style="margin: 10px 0; font-weight: 500;">主修课程：</div>
+                <div class="course-list">
+                    <div class="course-item">Hadoop大数据技术</div>
+                    <div class="course-item">分布式数据库原理</div>
+                    <div class="course-item">数据库原理与应用</div>
+                    <div class="course-item">计算机网络B</div>
+                    <div class="course-item">算法与数据结构</div>
+                    <div class="course-item">Python程序开发语言</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- 实习经历 -->
+        <div class="section">
+            <div class="section-title">实习经历</div>
+            <div class="content internship">
+                <!-- 实习1 -->
+                <div class="internship-item">
+                    <div class="item-header">
+                        <span><span class="company">北京安捷智合科技有限公司</span> | <span class="position">数据标注员</span></span>
+                        <span class="date">2025.07.03 - 2025.09.03</span>
+                    </div>
+                    <ul>
+                        <li>参与文字、图片数据的团队协作处理，高效沟通需求，保障批量任务按时完成</li>
+                        <li>使用专业工具进行数据标注，日均标注超200条，准确率达98%以上</li>
+                        <li>严格执行标注标准，自查数据质量，主动反馈问题并优化工作流程</li>
+                    </ul>
+                </div>
+                <!-- 实习2 -->
+                <div class="internship-item">
+                    <div class="item-header">
+                        <span><span class="company">砺之教育家教中心</span> | <span class="position">初中辅导家教</span></span>
+                        <span class="date">2024.11.01 - 至今</span>
+                    </div>
+                    <ul>
+                        <li>负责一名初二学生的数学辅导，针对性讲解知识点、组织练习并巩固，助力学生成绩从100分提升至120分</li>
+                    </ul>
+                </div>
+                <!-- 实习3 -->
+                <div class="internship-item">
+                    <div class="item-header">
+                        <span><span class="company">北京三快在线科技有限公司</span> | <span class="position">美团即时配送专员</span></span>
+                        <span class="date">2024.07.10 - 2024.08.15</span>
+                    </div>
+                    <ul>
+                        <li>借助大数据智能规划配送路线，每日精准完成超60单配送，高效履约获得商家与顾客称赞</li>
+                        <li>全程把控餐品安全与包装完整性，主动对接商家与顾客，以贴心服务满足多样化需求</li>
+                        <li>面对恶劣天气、交通高峰等突发情况，迅速调整配送策略，保障配送工作平稳推进</li>
+                    </ul>
+                </div>
+                <!-- 实习4 -->
+                <div class="internship-item">
+                    <div class="item-header">
+                        <span><span class="company">重庆朝天骏博商业管理有限公司</span> | <span class="position">商场引导与激励物资发放专员</span></span>
+                        <span class="date">2022.07.10 - 2022.08.10</span>
+                    </div>
+                    <ul>
+                        <li>担当商场引导先锋，每日高效指引超百位行人入场，有效提升商场初始客流量</li>
+                        <li>负责奖品分发工作，精准规划发放流程，确保每份奖品及时无误递至获奖者手中</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- 校园经历 -->
+        <div class="section">
+            <div class="section-title">校园经历</div>
+            <div class="content campus">
+                <div class="campus-item">
+                    <div class="item-header">
+                        <span class="role">团支书</span>
+                    </div>
+                    <ul>
+                        <li>精心策划团日活动，丰富班级文化生活</li>
+                        <li>积极宣传党团知识，有效提升班级思想建设水平</li>
+                    </ul>
+                </div>
+                <div class="campus-item">
+                    <div class="item-header">
+                        <span class="role">生活委员</span>
+                    </div>
+                    <ul>
+                        <li>精心采买班级物资，合理控制开支，保障班级日常需求</li>
+                        <li>科学安排卫生值日，营造整洁舒适的班级环境</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- 技能证书 -->
+        <div class="section">
+            <div class="section-title">技能证书</div>
+            <div class="content skills">
+                <ul>
+                    <li>全国大学英语四级证书</li>
+                    <li>机动车驾驶证</li>
+                    <li>熟练掌握各类办公软件，具备数据处理相关技能</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- 自我评价 -->
+        <div class="section">
+            <div class="section-title">自我评价</div>
+            <div class="content self-evaluation">
+                <ul>
+                    <li>高自驱、强目标感，渴望成功，勇于担当，性格开朗热情，具备良好的沟通协作能力</li>
+                    <li>勤学善思、积极进取，熟练掌握各类办公软件，能够快速适应行业变化与工作需求</li>
+                    <li>严于律己、注重细节，以高标准执行各项工作任务，具备较强的责任心与执行力</li>
+                </ul>
+            </div>
+        </div>
     </div>
-</div>
-
-<div class="content-section">
-    <h2>个人简介</h2>
-    <p>章若楠1996年出生于浙江温州，早年因担任淘宝模特进入大众视野，后凭借清新自然的外形和真实的表演风格踏入影视圈。2017年，她被导演落落选中，出演个人首部电影《悲伤逆流成河》，在片中饰演温柔善良的顾森湘一角，凭借该角色迅速走红，给观众留下了深刻印象。</p>
-    <p>章若楠的表演风格自然不做作，兼具颜值与演技，出道后参演了多部不同类型的影视作品，既塑造过青春校园题材的角色，也挑战过现实题材、古装题材等不同风格的作品，逐渐从新人演员成长为兼具人气与实力的青年演员。她性格开朗阳光，私下里热爱生活，是观众心中“初恋感”的代表演员之一。</p>
-</div>
-
-<div class="content-section">
-    <h2>教育背景</h2>
-    <p>章若楠毕业于<strong>杭州电子科技大学</strong>，就读于电子商务专业。虽然并非科班出身的演员，但她凭借自身的努力和对表演的热爱，在影视领域走出了属于自己的道路。大学期间，她因兼职做淘宝模特积累了镜头经验，也为后续进入演艺圈奠定了基础。</p>
-</div>
-
-<div class="content-section">
-    <h2>主演影视作品</h2>
-    <div class="movie-list">
-        <div class="movie-item">
-            <h3>《悲伤逆流成河》</h3>
-            <p><strong>类型：</strong>青春、校园、剧情</p>
-            <p><strong>上映时间：</strong>2018年</p>
-            <p><strong>饰演角色：</strong>顾森湘</p>
-            <p><strong>简介：</strong>该片改编自郭敬明同名小说，讲述了校园霸凌背景下的青春故事，章若楠饰演的顾森湘是温柔美好的校花，也是她的银幕处女作。</p>
-        </div>
-        <div class="movie-item">
-            <h3>《你的婚礼》</h3>
-            <p><strong>类型：</strong>爱情、青春</p>
-            <p><strong>上映时间：</strong>2021年</p>
-            <p><strong>饰演角色：</strong>尤咏慈</p>
-            <p><strong>简介：</strong>与许光汉合作主演，讲述了男女主角从高中到成年的十年爱情长跑故事，是章若楠主演的首部票房破亿的爱情片。</p>
-        </div>
-        <div class="movie-item">
-            <h3>《如果声音不记得》</h3>
-            <p><strong>类型：</strong>爱情、奇幻</p>
-            <p><strong>上映时间：</strong>2020年</p>
-            <p><strong>饰演角色：</strong>吉择</p>
-            <p><strong>简介：</strong>饰演患有抑郁症的女孩吉择，展现了细腻的内心戏，挑战了与以往不同的角色类型。</p>
-        </div>
-        <div class="movie-item">
-            <h3>《凭栏一片风云起》</h3>
-            <p><strong>类型：</strong>年代、励志、战争</p>
-            <p><strong>播出时间：</strong>2022年</p>
-            <p><strong>饰演角色：</strong>孟海棠</p>
-            <p><strong>简介：</strong>首次挑战年代剧，饰演热血青年孟海棠，与胡一天搭档，讲述抗战时期的家国情怀。</p>
-        </div>
-        <div class="movie-item">
-            <h3>《治愈系恋人》</h3>
-            <p><strong>类型：</strong>都市、爱情、医疗</p>
-            <p><strong>播出时间：</strong>2023年</p>
-            <p><strong>饰演角色：</strong>苏为安</p>
-            <p><strong>简介：</strong>饰演患有罕见病却乐观坚韧的医学生苏为安，与罗云熙合作，展现医疗职场与爱情故事。</p>
-        </div>
-        <div class="movie-item">
-            <h3>《照亮你》</h3>
-            <p><strong>类型：</strong>都市、爱情、救援</p>
-            <p><strong>播出时间：</strong>2023年</p>
-            <p><strong>饰演角色：</strong>徐来</p>
-            <p><strong>简介：</strong>饰演新闻记者徐来，与陈伟霆搭档，讲述消防员与记者之间的治愈系爱情故事。</p>
-        </div>
-    </div>
-</div>
 </body>
 </html>
