--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 出生年月：2003年8月 | 手机：13110235632 | 邮箱：2640414241@qq.com
             </div>
             <div class="contact-info">
-                备用邮箱：226418717003782@139.com
+                备用邮箱：yalone320@gmail.com
             </div>
             <div class="job-intention">求职意向：数据分析师</div>
         </div>
@@ -282,3 +282,4 @@
     </div>
 </body>
 </html>
+
