--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
         }
         body {
             font-family: "微软雅黑", "PingFang SC", sans-serif;
-            background-color: #f5f5f5;
+            background-color: #f5f7fa;
             color: #333;
-            line-height: 1.7;
+            line-height: 1.8;
             max-width: 1100px;
             margin: 0 auto;
             padding: 40px 20px;
         }
-        .resume-wrapper {
+        .resume-card {
             background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 3px 15px rgba(0, 0, 0, 0.05);
+            border-radius: 10px;
+            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.07);
             padding: 50px;
         }
         .header {
             text-align: center;
             margin-bottom: 45px;
             padding-bottom: 25px;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid #f0f0f0;
         }
         .avatar {
             width: 140px;
@@ -37,26 +37,26 @@
             border-radius: 6px;
             object-fit: cover;
             margin: 0 auto 20px;
-            border: 2px solid #f0f7ff;
+            border: 2px solid #e6f7ff;
         }
         .fullname {
             font-size: 32px;
             color: #222;
             margin-bottom: 12px;
-            font-weight: 600;
+            font-weight: 700;
         }
-        .base-info {
+        .contact-info {
             font-size: 15px;
             color: #666;
             margin-bottom: 8px;
         }
-        .job-want {
+        .job-target {
             display: inline-block;
             margin-top: 15px;
-            padding: 6px 20px;
-            background-color: #e6f4ff;
+            padding: 7px 22px;
+            background-color: #e6f7ff;
             color: #1890ff;
-            border-radius: 20px;
+            border-radius: 25px;
             font-size: 16px;
             font-weight: 500;
         }
@@ -67,14 +67,11 @@
             font-size: 20px;
             color: #1890ff;
             margin-bottom: 20px;
-            padding-bottom: 8px;
-            border-bottom: 2px solid #f0f7ff;
+            padding-left: 10px;
+            border-left: 4px solid #1890ff;
             font-weight: 600;
         }
-        .content-list {
-            margin-left: 20px;
-        }
-        .content-item {
+        .experience-item, .education-item {
             margin-bottom: 28px;
         }
         .item-header {
@@ -84,31 +81,18 @@
             margin-bottom: 10px;
             font-weight: 500;
         }
-        .item-name {
+        .position-company, .major-school {
             color: #222;
             font-size: 16px;
         }
-        .item-date {
+        .time-period {
             color: #888;
             font-size: 14px;
         }
-        .item-desc {
+        .item-content {
             color: #555;
             font-size: 15px;
-            line-height: 1.8;
-        }
-        .course-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 12px;
-            margin-top: 10px;
-        }
-        .course-tag {
-            padding: 5px 14px;
-            background-color: #f5fafe;
-            color: #1890ff;
-            border-radius: 16px;
-            font-size: 14px;
+            margin-left: 20px;
         }
         ul {
             list-style-type: disc;
@@ -117,8 +101,21 @@
         li {
             margin-bottom: 8px;
         }
+        .course-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            margin-top: 12px;
+        }
+        .course-tag {
+            padding: 5px 14px;
+            background-color: #f0f8fb;
+            color: #1890ff;
+            border-radius: 18px;
+            font-size: 14px;
+        }
         @media (max-width: 768px) {
-            .resume-wrapper {
+            .resume-card {
                 padding: 30px 15px;
             }
             .fullname {
@@ -132,34 +129,34 @@
                 align-items: flex-start;
                 gap: 5px;
             }
-            .course-container {
+            .course-list {
                 gap: 10px;
             }
         }
     </style>
 </head>
 <body>
-    <div class="resume-wrapper">
+    <div class="resume-card">
         <!-- 头部信息 -->
         <div class="header">
             <img src="ymy.jpg" alt="易梦园个人照片" class="avatar">
             <div class="fullname">易梦园</div>
-            <div class="base-info">出生年月：2003年8月 | 手机：13110235632</div>
-            <div class="base-info">邮箱：2640414241@qq.com | 备用邮箱：226418717003782@139.com</div>
-            <div class="job-want">求职意向：数据分析师</div>
+            <div class="contact-info">出生年月：2003年8月 | 手机：13110235632</div>
+            <div class="contact-info">邮箱：2640414241@qq.com</div>
+            <div class="job-target">求职意向：数据分析师</div>
         </div>
 
         <!-- 教育背景 -->
         <div class="section">
             <div class="section-title">教育背景</div>
-            <div class="content-item">
+            <div class="education-item">
                 <div class="item-header">
-                    <div class="item-name">重庆科技大学 | 数据科学与大数据技术</div>
-                    <div class="item-date">2022.09 - 2026.06</div>
+                    <div class="major-school">重庆科技大学 | 数据科学与大数据技术</div>
+                    <div class="time-period">2022.09 - 2026.06</div>
                 </div>
-                <div class="item-desc">
+                <div class="item-content">
                     <div>主修课程：</div>
-                    <div class="course-container">
+                    <div class="course-list">
                         <div class="course-tag">Hadoop大数据技术</div>
                         <div class="course-tag">分布式数据库原理</div>
                         <div class="course-tag">数据库原理与应用</div>
@@ -174,46 +171,50 @@
         <!-- 实习经历 -->
         <div class="section">
             <div class="section-title">实习经历</div>
-            <div class="content-list">
-                <div class="content-item">
+            <div class="item-content">
+                <!-- 实习1 -->
+                <div class="experience-item">
                     <div class="item-header">
-                        <div class="item-name">北京安捷智合科技有限公司 | 数据标注员</div>
-                        <div class="item-date">2025.07.03 - 2025.09.03</div>
+                        <div class="position-company">重庆朝天骏博商业管理有限公司 | 商场引导与激励物资发放专员</div>
+                        <div class="time-period">2022.07.10 - 2022.08.10</div>
                     </div>
-                    <ul class="item-desc">
-                        <li>参与文字、图片数据的团队协作处理，高效沟通需求，保障批量任务按时完成</li>
-                        <li>使用专业工具进行数据标注，日均标注超200条，准确率达98%以上</li>
-                        <li>严格执行标注标准，自查数据质量，主动反馈问题并优化工作流程</li>
-                    </ul>
-                </div>
-                <div class="content-item">
-                    <div class="item-header">
-                        <div class="item-name">砺之教育家教中心 | 初中辅导家教</div>
-                        <div class="item-date">2024.11.01 - 至今</div>
-                    </div>
-                    <ul class="item-desc">
-                        <li>负责一名初二学生的数学辅导，针对性讲解知识点、组织练习并巩固，助力学生成绩从100分提升至120分</li>
-                    </ul>
-                </div>
-                <div class="content-item">
-                    <div class="item-header">
-                        <div class="item-name">北京三快在线科技有限公司 | 美团即时配送专员</div>
-                        <div class="item-date">2024.07.10 - 2024.08.15</div>
-                    </div>
-                    <ul class="item-desc">
-                        <li>借助大数据智能规划配送路线，每日精准完成超60单配送，高效履约获得商家与顾客称赞</li>
-                        <li>全程把控餐品安全与包装完整性，主动对接商家与顾客，以贴心服务满足多样化需求</li>
-                        <li>面对恶劣天气、交通高峰等突发情况，迅速调整配送策略，保障配送工作平稳推进</li>
-                    </ul>
-                </div>
-                <div class="content-item">
-                    <div class="item-header">
-                        <div class="item-name">重庆朝天骏博商业管理有限公司 | 商场引导与激励物资发放专员</div>
-                        <div class="item-date">2022.07.10 - 2022.08.10</div>
-                    </div>
-                    <ul class="item-desc">
+                    <ul>
                         <li>担当商场引导先锋，每日高效指引超百位行人入场，有效提升商场初始客流量</li>
-                        <li>负责奖品分发工作，精准规划发放流程，确保每份奖品及时无误递至获奖者手中</li>
+                        <li>负责奖品分发工作，精准规划流程，确保每份奖品及时无误地递至获奖者手中</li>
+                    </ul>
+                </div>
+                <!-- 实习2 -->
+                <div class="experience-item">
+                    <div class="item-header">
+                        <div class="position-company">北京三快在线科技有限公司 | 美团即时配送专员</div>
+                        <div class="time-period">2024.07.10 - 2024.08.15</div>
+                    </div>
+                    <ul>
+                        <li>借助大数据智能规划，每日精准完成超60单配送，高效履约获商家、顾客称赞</li>
+                        <li>全程把关餐品安全与包装，主动对接商家、顾客，贴心服务满足多样需求</li>
+                        <li>面对恶劣天气、交通高峰，迅速调整策略，全力保障配送工作平稳推进</li>
+                    </ul>
+                </div>
+                <!-- 实习3 -->
+                <div class="experience-item">
+                    <div class="item-header">
+                        <div class="position-company">砺之教育家教中心 | 初中辅导家教</div>
+                        <div class="time-period">2024.11.01 - 至今</div>
+                    </div>
+                    <ul>
+                        <li>负责一名初二学生的数学辅导，并对其进行具体知识点的讲解、练习及巩固，使其成绩由100分提高到120分</li>
+                    </ul>
+                </div>
+                <!-- 实习4 -->
+                <div class="experience-item">
+                    <div class="item-header">
+                        <div class="position-company">北京安捷智合科技有限公司 | 数据标注员</div>
+                        <div class="time-period">2025.07.03 - 2025.09.03</div>
+                    </div>
+                    <ul>
+                        <li>负责文字、图片团队协作处理批量任务，高效沟通需求，保障项目按时完成</li>
+                        <li>使用专业工具进行数据标注，日均标注超200条，准确率98%以上</li>
+                        <li>严格执行标注标准，自查数据质量，主动反馈问题优化流程</li>
                     </ul>
                 </div>
             </div>
@@ -222,30 +223,35 @@
         <!-- 校园经历 -->
         <div class="section">
             <div class="section-title">校园经历</div>
-            <ul class="content-list item-desc">
-                <li><strong>团支书</strong>：精心策划团日活动，积极宣传党团知识，有效提升班级思想建设</li>
-                <li><strong>生活委员</strong>：精心采买班级物资，合理安排卫生值日，营造良好班级环境</li>
-            </ul>
+            <div class="item-content">
+                <ul>
+                    <li><strong>生活委员</strong>：精心采买班级物资，合理安排卫生值日，营造良好环境</li>
+                    <li><strong>团支书</strong>：精心策划团日活动，积极宣传党团知识，有效提升班级思想建设</li>
+                </ul>
+            </div>
         </div>
 
         <!-- 技能证书 -->
         <div class="section">
             <div class="section-title">技能证书</div>
-            <ul class="content-list item-desc">
-                <li>全国大学英语四级证书</li>
-                <li>机动车驾驶证</li>
-                <li>熟练掌握各类办公软件，具备数据处理相关技能</li>
-            </ul>
+            <div class="item-content">
+                <ul>
+                    <li>全国大学英语四级证书</li>
+                    <li>机动车驾驶证</li>
+                </ul>
+            </div>
         </div>
 
         <!-- 自我评价 -->
         <div class="section">
             <div class="section-title">自我评价</div>
-            <ul class="content-list item-desc">
-                <li>高自驱、强目标感，渴望成功，勇于担当，性格开朗热情，具备良好沟通协作能力</li>
-                <li>勤学善思、积极进取，熟练掌握各类办公软件，能快速适应行业变化与工作需求</li>
-                <li>严于律己、注重细节，以高标准执行各项工作任务，具备较强的责任心与执行力</li>
-            </ul>
+            <div class="item-content">
+                <ul>
+                    <li>高自驱，强目标，渴望成功，勇于担当，开朗热情</li>
+                    <li>勤学习，常进取，熟练掌握各类办公软件，适应行业变化需求</li>
+                    <li>严律己，重细节，高标准执行工作任务</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
